其他文件/YAML文件/后端/todolists-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytodolists
  namespace: gy
  labels:
    app: todolists
  annotations:
    zhushi: My Todo Lists
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolists
  template:
    metadata:
      labels:
        app: todolists
    spec:
      containers:
      - command:
        - java
        - -jar
        - /temp/myTodoLists-0.0.4-SNAPSHOT.jar
        image: java:8-jdk
        imagePullPolicy: IfNotPresent
        name: todolists
        ports:
        - containerPort: 8888
        volumeMounts:
        - mountPath: /temp
          name: jar-volume
      volumes:
      - emptyDir: {}
        name: jar-volume

---

apiVersion: v1
kind: Service
metadata:
  name: todolists-svc
  namespace: gy
  labels:
    app: todolists
spec:
#  ports:
#    - protocol: TCP
#      port: 8888			
#      targetPort: 8888
  type: NodePort
  ports:
    - port: 8888
      nodePort: 30000
  selector:
    app: todolists
